# welfare_state_analytics

./: .coveragerc  .dockerignore  .editorconfig  .env  .flake8  .gitattributes  .gitignore  .isort.cfg  .pylintrc  .style.yapf  .travis.yml  Makefile  Makefile.dev  Makefile.riksprot  NOTE.md  Pipfile  README.md  README.txt  __paths__.py  co_ocurrence_runner.py  docker-compose.yml  environment.yml  install_extensions.sh  ipynb2py.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.sh  run_coherence.py  run_coocurrence.py  run_kblab_proto_content.py  run_lda.py  run_lda.sh  run_vectorizer.py  runner.py  scratchpad.py  setup.py  vectorize_runner.py  word_distribution_trends_runner.py
.devcontainer/: Dockerfile  common-debian.sh  devcontainer.json
.devcontainer.wip/: Dockerfile  debian-base.sh  devcontainer.json
archive/: _old_01_most_un_uniform_distributions.ipynb  word_distribution_analysis.ipynb
case_study_political_in_newspapers/: unit_tests.md  window_coocurrence.ipynb  window_coocurrence.md  window_coocurrence.py  window_coocurrence2.ipynb
case_study_word_distribution_trends/: unit_tests.ipynb  unit_tests.md  unit_tests.py  word_distribution_analysis.ipynb  word_distribution_analysis.md  word_distribution_analysis.py
case_study_word_distribution_trends/iteration_01/: corpus_vectorizer.py  text_corpus.py  unit_tests.ipynb  utility.py  word_distribution_analysis.ipynb  word_distribution_analysis.md  word_distribution_analysis.py
common/: corpus_vectorizer.py
docker/: Dockerfile  README.md  docker-compose.yml  motd  requirements.txt
docker/scripts/: fix-it.sh  jupyter_notebook_config.py  setup-jupyterlab.sh  setup-user.sh  start-jupyterlab.sh
jupyterhub-docker/: README.md  docker-compose.yml
jupyterhub-docker/jupyterhub/: Dockerfile  jupyterhub_config.CAS.py  jupyterhub_config.github.py  jupyterhub_config.py
jupyterhub-docker/jupyterlab/: Dockerfile  Pipfile
legacy/scrachpads/: 01_most_ununiform_distribution.py
legacy/tfidf_word_siginificance/: tfidf_word_significance.py
logs/: 202205121717_vectorize-id.yml  202205121725_vectorize-id.yml  202205122137_tm-train-id.yml  202205122137_tm-train.yml  202205130751_tm-train-id.yml  202205130754_tm-train-id.yml  202309111342_vectorize-id.yml  202309111455_tm-train-id.yml  202309111458_tm-train-id.yml  202309111507_tm-train-id.yml  202309111509_tm-train-id.yml  202310231242_tm-train-id.yml  202311011650_vectorize-id.yml  202311020843_vectorize-id.yml  202311061636_vectorize-id.yml  202311061641_vectorize-id.yml  202311061646_vectorize-id.yml  202311061724_vectorize-id.yml  dtm_riksprot_v0.4.3_20220512.out  dtm_riksprot_v0.9.0_20230911.out
notebooks/: __paths__.py  corpus_data_config.py
notebooks/BLM/: explore.ipynb  explore.py
notebooks/blm/: bolima.yml
notebooks/co_occurrence/: __paths__.py  co_occurrence_gui.py  co_occurrence_trends.ipynb  co_occurrence_trends.py
notebooks/common/: __init__.py  display_topic_titles.py  distributions_plot.py  ipyaggrid_utility.py  load_topic_model_gui.py  model_container.py  topic_topic_network_display.py  topic_trend_display.py  topic_trends_overview_display.py  topic_utility.py  topic_word_distribution_gui.py  topic_wordcloud_gui.py  utils.py
notebooks/concept_co_occurrences/: co_occurrence_trends.ipynb  co_occurrence_trends.py  gui_callback.py  loaded_callback.py  scratchpad.py  utils.py
notebooks/kb_lab_api/: kblab_download.ipynb
notebooks/most_discriminating_words/: mdw_runner.py  most_discriminating_terms.ipynb  most_discriminating_terms.py  most_discriminating_terms_gui.py
notebooks/named_entity_recognition/: bert_kb_ner.py  named_entity_recognition.ipynb  named_entity_recognition.md  named_entity_recognition.py
notebooks/other/: scratchpad.ipynb  scratchpad.py
notebooks/political_in_newspapers/: 0_convert_data_files.ipynb  1_prepare_and_explore.ipynb  1_prepare_and_explore.py  3_explore_topic_models.ipynb  3_explore_topic_models.py  4_mdw.ipynb  4_mdw.py  __init__.py  __paths__.py  corpus_data.py  mdw_runner.py  repository.py
notebooks/pos_statistics/: __paths__.py  pos_statistics.ipynb  pos_statistics.py
notebooks/riksdagens_protokoll/: explore-corpus.ipynb  speech_statistics.ipynb  speech_statistics.py  topic_trends_gui.py  topic_trends_overview_gui.py  word_trends.ipynb  word_trends_gui.py
notebooks/riksdagens_protokoll_raw/: riksprot_1867-2019.yml  riksprot_1920-2019.yml
notebooks/scrachpads/: 01_most_ununiform_distribution.ipynb  01_most_ununiform_distribution.py  09_scratch_pad.ipynb  09_scratch_pad.py  chisqare.ipynb  compute_topic_model.ipynb  ipyaggrid_example.ipynb
notebooks/statens_offentliga_utredningar/: 0_prepare_data.py  3_explore_topic_models.ipynb  3_explore_topic_models.py  addpaths.py  corpus_1867-2019.yml  focus_topics_network_gui.py  topic_document_network_gui.py  topic_document_texts_gui.py  topic_documents_gui.py  topic_topic_network_gui.py  topic_trends_gui.py  utils.py  (+1 more)
opts/: dtm_riksprot.yml  tm_riksprot.yml
resources/: parliamentary-debates.yml  riksdagens-protokoll-kb-labb.yml  riksdagens-protokoll-parlaclarin.yml  riksdagens-protokoll-test.yml  riksdagens-protokoll.yml  riksprot_1867-2019.yml  sou_sparv4.yml
scripts/: 01_compile_sou_1996.py  mdw_runner.py  run_coherence.py  run_coocurrence.py  run_kblab_proto_content.py  run_lda.py  run_vectorizer.py  sparv-to-text.py  vectorize.py  vectorize_corpus.py  vectorize_protocols.py
sparv_pipeline/: Dockerfile  Makefile.onlypos  README.md  entry-point.sh  prepare_corpus.sh  sparvit-to-xml.sh  sparvit.sh
tests/: bug_test.py  co_occurrence_trends_test.py  conftest.py  load_debates_test.py  multitrends_test.py  ner_stagger_test.py  sparv_corpus_test.py  sparv_xml_iterator_test.py  sparv_xml_to_text_test.py  streamify_text_source_test.py  testbed.sql  text_transformer_test.py  tokenized_corpus_test.py  topic_modelling_test.py  userlist_test.py  utils.py  vectorized_corpus_test.py  word_trends_test.py  zip_iterator_test.py
westac_hub/: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  jupyterhub_config.py  traefik.toml
(+642 files in other folders)
